fix for text link icon on mobile (placing at end of link)

--- a/scss/components/_links.scss
+++ b/scss/components/_links.scss
@@ -26,6 +26,7 @@ a {
 }
 
 .text-link {
+  display: inline-block;
   color: $heritage;
   cursor: pointer;
   font-family: "Public Sans";
@@ -33,18 +34,19 @@ a {
   font-weight: bold;
   line-height: 26px;
   text-decoration: underline;
+  margin-right: 3.5rem;
   &:after {
+    content: "\00A0";
     display: inline-block;
     position: relative;
+    margin-right: -3.5rem;
     right: 1.5rem;
-    content: "\00A0";
     height: 4rem;
     width: 4rem;
     background: image("caret-right.svg") no-repeat 99.5% 0.4rem;
     background-size: 2rem;
   }
-  // padding-right: 2.5rem;
-  // margin-right: 1rem;
+
   &:focus,
   &.focus {
     color: $sweetgrass;
@@ -62,14 +64,23 @@ a {
 }
 
 .external-link {
+  display: inline-block;
   color: $heritage;
-  background: image("external-link-icon.svg") no-repeat;
-  background-position: right 0.9rem;
-  background-size: 1.2rem;
-  padding-right: 1.6rem;
-  margin-right: 1rem;
   font-size: 2rem;
   font-weight: 700;
+  margin-right: 1.5rem;
+  &:after {
+    content: "\00A0";
+    display: inline-block;
+    position: relative;
+    margin-right: -1.5rem;
+    height: 2rem;
+    width: 1.6rem;
+    background: image("external-link-icon.svg") no-repeat;
+    background-position: right 0.9rem;
+    background-size: 1.2rem;
+  }
+
   &:hover,
   &.hover {
     color: $sweetgrass;
